# otapi-js

./: CMakeLists.txt  README.md  binding.gyp  index.js  node_otapi.cc  otapi-js.cc  otapi-js.hpp  package.json  passwordCallback.cpp  passwordCallback.hpp  test.js
src/: otapi-js.cc  otapi-js.hpp  passwordCallback.cpp  passwordCallback.hpp
test/: cleanup.js  testaddon.js  testmodule.js  testsmartcontract.js  timeDecayCurrency-Exponential.xml  timeDecayCurrency-Sudden.xml
